<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tab3"
        android:layout_marginBottom="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Title"
                android:text="@string/quizname" />
            <TextView
                android:id="@+id/quiznamecreated"
                style="@style/Title"
                android:hint="@string/quizname" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Title"
                android:text="@string/quizfield" />
            <TextView
                android:id="@+id/quizfield"
                style="@style/Title"
                android:hint="@string/quizfield" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Title"
                android:text="@string/noofquestions" />
            <TextView
                style="@style/Title"
                android:id="@+id/noofquestionscreated"
                android:hint="@string/noofquestions" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Title"
                android:text="@string/publishedon" />
            <TextView
                style="@style/Title"
                android:id="@+id/publishedoncreated"
                android:hint="@string/publishedon" />

        </TableRow>

    </TableLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tab3">

        <Button
            style="@style/Button"
            android:id="@+id/edit"
            android:text="@string/edit"
            android:background="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="16dp" />

        <Button
            style="@style/Button"
            android:id="@+id/delete"
            android:text="@string/delete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            />
    </LinearLayout>

</RelativeLayout>