<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/tab1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Title"
                    android:text="@string/quizname"
                    android:layout_marginRight="12dp" />

                <EditText
                    android:id="@+id/enterquizname"
                    style="@style/Title"
                    android:hint="@string/enterquizname" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Title"
                    android:text="@string/fieldofquiz"
                    android:layout_marginRight="12dp" />

                <EditText
                    android:id="@+id/enterfieldofquiz"
                    style="@style/Title"
                    android:hint="@string/enterfieldofquiz" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Title"
                    android:text="@string/noofquestions"
                    android:layout_marginRight="12dp" />

                <EditText
                    android:id="@+id/enternoofque"
                    style="@style/Title"
                    android:hint="@string/enternoofquetions" />

            </TableRow>

        </TableLayout>

        <TextView
            style="@style/Title"
            android:layout_marginHorizontal="16dp"
            android:text="Enter Question No:1"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/tab1"
            android:id="@+id/textc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:id="@+id/rel1"
            android:layout_below="@id/textc">

            <EditText
                android:id="@+id/craetequeedittext"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/border"
                android:hint="@string/enterquestion"
                android:layout_marginBottom="16dp" />

            <TableLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/tab2"
                android:layout_below="@id/craetequeedittext"
                android:layout_marginBottom="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp">

                    <EditText
                        android:id="@+id/addop1"
                        style="@style/Title"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:hint="@string/option"
                        android:layout_marginRight="6dp" />

                    <EditText
                        android:id="@+id/addop2"
                        style="@style/Title"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:hint="@string/option" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/addop3"
                        style="@style/Title"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:hint="@string/option"
                        android:layout_marginRight="6dp" />

                    <EditText
                        android:id="@+id/addop4"
                        style="@style/Title"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:hint="@string/option" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <EditText
                        android:id="@+id/rightans"
                        style="@style/Title"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:hint="@string/enterrightans" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tab2">

                <Button
                    style="@style/Button"
                    android:id="@+id/submitcreatedque"
                    android:text="@string/create"
                    android:background="@color/colorPrimary"
                    android:layout_weight="1"
                    android:layout_marginRight="12dp"
                    android:onClick="onCreateQue" />

                <Button
                    style="@style/Button"
                    android:id="@+id/resetque"
                    android:text="@string/reset"
                    android:onClick="onResetQue"
                    android:layout_weight="1" />
            </LinearLayout>

        </RelativeLayout>

        <Button
            style="@style/Button"
            android:id="@+id/submitcreatedquiz"
            android:text="@string/create"
            android:background="@color/colorPrimary"
            android:layout_below="@id/rel1"
            android:layout_marginVertical="16dp"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            android:onClick="onCreate" />

    </RelativeLayout>
</ScrollView>